--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Todo App</h1>
@@ -12,6 +13,15 @@
         <input type="text" id="todoTitle" placeholder="Todo title">
         <input type="text" id="todoCategory" placeholder="Category">
         <button onclick="handleAddTodo()">Add Todo</button>
+    </div>
+
+    <div>
+        <h3>Filters</h3>
+        <input type="text" id="filterCategory" placeholder="Category">
+        <button onclick="filterTodosByCategory()">Category</button>
+        <button onclick="filterCompleteTodos()">Complete</button>
+        <button onclick="filterIncompleteTodos()">Incomplete</button>
+        <button onclick="renderTodos()">Reset Filters</button>
     </div>
 
     <h2>Todo List</h2>
