feat: counter dei todo completati

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <button onclick="handleAddTodo()">Add Todo</button>
     </div>
 
+    <div id="todoCounters">
+        <div id="completedCount">Completed: 0</div>
+        <div id="incompleteCount">Incomplete: 0</div>
+    </div>    
+
     <div>
         <h3>Filters</h3>
         <input type="text" id="filterCategory" placeholder="Category">
