feat: completata funzionalità temporanea (deleteAllTodos)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="text" id="todoTitle" placeholder="Todo title">
         <input type="text" id="todoCategory" placeholder="Category">
         <button onclick="handleAddTodo()">Add Todo</button>
+        <button onclick="deleteAllTodos()">Delete All</button>
     </div>
 
     <div id="todoCounters">
